--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '3'
 services:
   app:
+    image: api_java_app:latest
     build: .
     ports:
       - "8081:8081"
     command: java -jar e-hospital-app.jar
     restart: always
+# networks:
+#   my-network:
+#     driver: bridge
